update with meeting link assigined with student and no.of teacher with no.of student

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/virtual_classroom
+MONGODB_URI=mongodb://localhost:27017/virtual
 PORT=5000
 EMAIL_USER=bindugugulothu10@gmail.com
 EMAIL_PASS=igfzhttskztrktly
