--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/virtual
+MONGODB_URI=mongodb+srv://bindugugulothu32_db_user:iSvOVIw0AJnHL0j2@quiz.joazn5g.mongodb.net/?appName=Quiz
 PORT=5000
 EMAIL_USER=bindugugulothu10@gmail.com
 EMAIL_PASS=igfzhttskztrktly
